[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "langchain-yutori"
version = "0.1.0"
description = "LangChain integration for the Yutori API — n1 browser control, browser automation, web research, and monitoring"
readme = "README.md"
license = { text = "Apache License 2.0" }
requires-python = ">=3.10"
keywords = ["langchain", "yutori", "browser-automation", "web-research", "web-monitoring", "ai-agents"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "langchain-core>=0.3,<0.4",
    "langchain-openai>=0.2,<0.4",
    "pydantic>=2.0",
    "yutori[n1]>=0.4.10",
]

[project.optional-dependencies]
dev = [
    "build>=1.2",
    "langchain-tests==0.3.19",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[project.urls]
Homepage = "https://yutori.com"
Documentation = "https://docs.yutori.com"
Repository = "https://github.com/yutori-ai/langchain-yutori"

[tool.hatch.build.targets.wheel]
packages = ["langchain_yutori"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: tests that call real Yutori APIs",
]
addopts = "-m 'not integration'"
